[gd_scene load_steps=8 format=3 uid="uid://bgtyb0cnj6vls"]

[ext_resource type="Texture2D" uid="uid://df4tjri76qbou" path="res://images/Main_menu.png" id="1_06t4h"]
[ext_resource type="Script" uid="uid://i3k0dfv2ixgp" path="res://main_menu.gd" id="1_7vrkn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_06t4h")
modulate_color = Color(0.7121294, 0.7121294, 0.71212935, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.29586652, 0.2958665, 0.2958665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")
metadata/_edit_vertical_guides_ = [663.0]

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -13.0
offset_right = -7.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43
anchor_top = 0.573
anchor_right = 0.43
anchor_bottom = 0.573
offset_left = -157.60004
offset_top = 13.159973
offset_right = 339.39996
offset_bottom = 275.15997
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Start game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Exit game"

[node name="SettingsPopup" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 633.0
offset_top = 515.0
offset_right = 1232.0
offset_bottom = 797.0

[node name="BackButton" type="Button" parent="SettingsPopup"]
layout_mode = 0
offset_left = 520.0
offset_top = 8.0
offset_right = 588.0
offset_bottom = 47.0
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPopup"]
layout_mode = 0
offset_left = 20.0
offset_top = 29.0
offset_right = 559.0
offset_bottom = 478.0

[node name="Settings" type="Label" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Volume" type="Label" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2

[node name="Brightness" type="Label" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2

[node name="Help" type="Button" parent="SettingsPopup/VBoxContainer"]
layout_mode = 2
text = "Help"

[node name="HelpPopup" type="Panel" parent="SettingsPopup"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = 88.0
offset_right = 570.0
offset_bottom = 392.0

[node name="HowToPlay" type="Label" parent="SettingsPopup/HelpPopup"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 484.0
offset_bottom = 258.0
text = "How to Play:

River: Get rid of the trash that sapwn in the river.

Trees: Click the rake to sweep the leaves.

Sorting: Drag items to the correct bin."
horizontal_alignment = 1

[node name="Close" type="Button" parent="SettingsPopup/HelpPopup"]
layout_mode = 0
offset_left = 476.0
offset_top = 2.0
offset_right = 523.0
offset_bottom = 39.0
text = "X"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="SettingsPopup/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsPopup/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="SettingsPopup/HelpPopup/Close" to="." method="_on_close_pressed"]
